添加AF3.0框架，添加get post download upload代码

--- a/AFNetworking3.0/Podfile
+++ b/AFNetworking3.0/Podfile
@@ -1,4 +1,6 @@
 platform :ios, '7.0'
 inhibit_all_warnings!
 
-pod 'AFNetworking', '~> 2.5.4'
+target ‘AFNetworking3.0’ do
+pod 'AFNetworking', '~> 3.1.0'
+end
