--- a/MyDemo/Demo/Other/Info.plist
+++ b/MyDemo/Demo/Other/Info.plist
@@ -7,6 +7,18 @@
 		<key>NSAllowsArbitraryLoads</key>
 		<true/>
 	</dict>
+    <key>NSCameraUsageDescription</key>
+    <string>用于拍摄图片及扫描二维码</string>
+    <key>NSLocationWhenInUseUsageDescription</key>
+    <string>用于基于定位的服务</string>
+    <key>NSMicrophoneUsageDescription</key>
+    <string>用于即时通讯的语音功能</string>
+    <key>NSPhotoLibraryUsageDescription</key>
+    <string>用于上传照片</string>
+    <key>NSContactsUsageDescription</key>
+    <string>contactsDesciption</string>
+    <key>NSPhotoLibraryUsageDescription</key>
+    <string>此 App 需要您的同意才能读取媒体资料库</string>
 	<key>UIAppFonts</key>
 	<array>
 		<string>钟齐蔡云汉毛笔行书.TTF</string>
