--- a/MyDemo/Demo/Other/Info.plist
+++ b/MyDemo/Demo/Other/Info.plist
@@ -25,7 +25,7 @@
 	<key>NSAppTransportSecurity</key>
 	<dict>
 		<key>NSAllowsArbitraryLoads</key>
-		<true/>
+		<false/>
 	</dict>
 	<key>NSCameraUsageDescription</key>
 	<string>用于拍摄图片及扫描二维码</string>
