--- a/MyDemo/Demo/Other/Supporting Files/demoViewMap.plist
+++ b/MyDemo/Demo/Other/Supporting Files/demoViewMap.plist
@@ -218,5 +218,13 @@
 		<key>description</key>
 		<string>波浪线</string>
 	</dict>
+	<dict>
+		<key>className</key>
+		<string>LogDemoHomeViewController</string>
+		<key>identifier</key>
+		<string>log</string>
+		<key>description</key>
+		<string>日志</string>
+	</dict>
 </array>
 </plist>
