--- a/MyDemo/Podfile
+++ b/MyDemo/Podfile
@@ -7,7 +7,7 @@ inhibit_all_warnings!
 target:'Demo' do
 
 # zcp
-pod 'ZCPKit', '~> 0.0.2'
+pod 'ZCPKit', :git => 'git@gitlab.com:Malygos/ZCPKit.git'
 # 网络请求
 pod 'AFNetworking', '~> 3.2.1'
 # 图片加载
