1.整理alert demo 2.整理拍照与访问相册 demo

--- a/MyDemo/Demo/Other/Supporting Files/demoViewMap.plist
+++ b/MyDemo/Demo/Other/Supporting Files/demoViewMap.plist
@@ -100,11 +100,11 @@
 	</dict>
 	<dict>
 		<key>className</key>
-		<string>AlertViewDemoHomeController</string>
+		<string>AlertViewDemoController</string>
 		<key>identifier</key>
-		<string>alertHome</string>
-		<key>description</key>
 		<string>alert</string>
+		<key>description</key>
+		<string>系统弹窗</string>
 	</dict>
 	<dict>
 		<key>className</key>
