--- a/MyDemo/Podfile
+++ b/MyDemo/Podfile
@@ -1,5 +1,5 @@
 source 'https://github.com/CocoaPods/Specs.git'
-source 'https://gitlab.com/Malygos/zcprepo.git'
+source 'https://gitlab.com/Malygos/zcp-repos.git'
 
 platform :ios, '9.0'
 inhibit_all_warnings!
